# auto-unlock-server

./: .env.example  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.prod  Dockerfile.test  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.test.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pytest.yml
app/: config.py  main.py  show_bot_list.py
app/api/: __init__.py  method.py
app/api/endpoints/: method.py  mongodb.py  some_endpoint.py  switch_bot.py  unlock.py
app/api/src/: authenticator.py  auto_unlock.py  mongodb.py  switch_bot.py  transcription.py
app/src/: authenticator.py  auto_unlock.py  mongodb.py  switch_bot.py  transcription.py
app/utils/: config.py  file_manager.py
server/: main.py  show_bot_list.py
server/api/: __init__.py  method.py
server/src/: authenticator.py  auto_unlock.py  mongodb.py  switch_bot.py  transcription.py
server/utils/: __init__.py  config.py  file_manager.py
tests/: test_authenticator.py  test_auto_unlock_api.py
